--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="assets/css/view.css">
+
     <title>Karol Ołtarzewski</title>
   </head>
   <body>
@@ -21,7 +23,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <!--  <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -35,10 +37,19 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
-    <div id="1" style="min-height: 62em;background: lightgre;"></div>
+    <div id="1" style="min-height: 62em;background: gainsboro;">
+      <div class="container text-center my-auto" >
+        <h1 class="mb-1">Karol Ołtarzewski</h1>
+        <h3 class="mb-5">
+          <em>Python programmer</em>
+        </h3>
+      </div>
+      </div>
     <div id="2" style="min-height: 62em;background: green;"></div>
     <div id="3" style="min-height: 62em;background: violet;"></div>
+
+
   </body>
 </html>
