--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=B612+Mono|Major+Mono+Display" rel="stylesheet"> 
 
     <title>Karol Ołtarzewski</title>
@@ -46,8 +46,8 @@
         <h3>
           <em id="short_description">Python programmer</em>
         </h3>
-        <section id="section01" class="demo">
-          <a id="section01" class="demo" href="#2"><span></span></a>
+        <section id="slider" class="demo">
+          <a id="slider" class="demo" href="#2"><span></span></a>
         </section>
       </div>
       </section>
