--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=B612+Mono|Major+Mono+Display" rel="stylesheet"> 
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <title>Karol Ołtarzewski</title>
   </head>
@@ -24,23 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 
-<!--     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#1">1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#2">2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#3">3</a>
-          </li>
-        </ul>
-      </div>
-    </nav> -->
-
-    <section id="1" style="min-height: 62em; background: gainsboro;">
+    <section id="1" style="height: 100vh; background: gainsboro;">
       <div id="quick_description" class="container text-center" >
         <h1 id="my_name" class="mb-1">Karol Ołtarzewski</h1>
         <h3>
@@ -51,8 +35,8 @@
         </section>
       </div>
       </section>
-    <section id="2" style="min-height: 62em;background: green;"></section>
-    <section id="3" style="min-height: 62em;background: violet;"></section>
+    <section id="2" style="height: 100vh; background: green;"></section>
+    <section id="3" style="height: 100vh; background: violet;"></section>
 
 
   </body>
