--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 
-    <section id="1" style="height: 100vh; background: gainsboro;">
+    <section id="1" style="height: 79vh; background: gainsboro;">
       <div id="quick_description" class="container text-center" >
         <h1 id="my_name" class="mb-1">Karol Ołtarzewski</h1>
         <h3>
@@ -35,8 +35,28 @@
         </section>
       </div>
       </section>
-    <section id="2" style="height: 100vh; background: green;"></section>
-    <section id="3" style="height: 100vh; background: violet;"></section>
+
+    <section id="2" style="height: 100vh; background: white;"></section>
+    
+    <section id="3" style="height: 20vh; background: gainsboro;">
+        <ul class="list-inline mb-5">
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle" href="#">
+              <i class="icon-mail"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle" href="#">
+              <i class="icon-twitter"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle" href="#">
+              <i class="icon-github"></i>
+            </a>
+          </li>
+        </ul>
+    </section>
 
 
   </body>
