--- a/index.html
+++ b/index.html
@@ -31,23 +31,13 @@
     <section id="2" style="height: 100vh; background: white;"></section>
     
     <section id="3" style="height: 20vh; background: gainsboro;">
-        <ul class="list-inline mb-5">
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle" href="#">
-              <i class="icon-mail"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle" href="#">
-              <i class="icon-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle" href="#">
-              <i class="icon-github"></i>
-            </a>
-          </li>
-        </ul>
+      <div id="social_medias">
+        <center>
+          <a href="https://github.com/oltarzewskik">
+            <img title="Github" alt="Github" src="assets/images/GitHub-Mark-64px.png"  />
+          </a>
+        </center>
+      </div>
     </section>
 
 
