Making my footer looks pretty and making my code compatible with html 5

--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
         <h3>
           <em id="short_description">Python programmer</em>
         </h3>
-        <section id="slider" class="demo">
-          <a id="slider" class="demo" href="#2"><span></span></a>
-        </section>
       </div>
+      <section id="slider" class="demo">
+        <a id="slider" class="demo" href="#2"><span></span></a>
+      </section>
       </section>
 
     <section id="2" style="height: 100vh; background: white;"></section>
     
-    <section id="3" style="height: 20vh; background: gainsboro;">
+    <footer id="3" style="height: 20vh; background: gainsboro;">
       <div id="social_medias">
-        <center>
-          <a href="https://github.com/oltarzewskik">
-            <img title="Github" alt="Github" src="assets/images/GitHub-Mark-64px.png"  />
-          </a>
-        </center>
+          <div class="icon">
+            <a href="https://github.com/oltarzewskik">
+              <img title="Github" alt="Github" src="assets/images/GitHub-Mark-Light-120px-plus.png" width="50" height="50"/>
+            </a>
+          </div>
+          <div class="icon">
+            <a href="https://twitter.com/oltarzewskik">
+              <img title="Twitter" alt="Twitter" src="assets/images/Twitter_Social_Icon_Circle_White.png" width="50" height="50" />
+            </a>
+          </div>
       </div>
-    </section>
+    </footer>
 
 
   </body>
