Some small improvements of my code and preperation for implementing jinja

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="2" style="height: 100vh; background: white;"></section>
     
-    <footer id="3" style="height: 20vh; background: gainsboro;">
+    <footer id="3" style="background: gainsboro;">
       <div id="social_medias">
         <a href="https://github.com/oltarzewskik">
           <img title="Github" alt="Github" src="assets/images/GitHub-Mark-Light-120px-plus.png" width="50" height="50"/>
