--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Major+Mono+Display" rel="stylesheet"> 
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link href="assets/css/fonts.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
     <title>Karol Ołtarzewski</title>
   </head>
   <body>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 
-    <section id="1" style="height: 79vh; background: gainsboro;">
-      <div id="quick_description" >
-        <h1 id="my_name">Karol Ołtarzewski</h1>
+    <section id="home">
+      <div id="quick-description" >
+        <h1 id="my-name">Karol Ołtarzewski</h1>
         <h3>
-          <em id="short_description">Python programmer</em>
+          <em id="short-description">Python programmer</em>
         </h3>
       </div>
-      <section id="slider" class="demo">
-        <a id="slider" class="demo" href="#2"><span></span></a>
-      </section>
+      <div id="slider">
+        <a href="#skills"><span></span></a>
+      </div>
       </section>
 
-    <section id="2" style="height: 100vh; background: white;"></section>
+    <section id="skills">
+      
+    </section>
     
-    <footer id="3" style="background: gainsboro;">
-      <div id="social_medias">
+    <footer id="footer">
+      <div id="social-medias">
         <a href="https://github.com/oltarzewskik">
           <img title="Github" alt="Github" src="assets/images/GitHub-Mark-Light-120px-plus.png" width="50" height="50"/>
         </a>
@@ -40,7 +41,6 @@
         </a>
       </div>
     </footer>
-
 
   </body>
 </html>
