Added email contact icon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
           <img title="Github" alt="Github" src="assets/images/GitHub-Mark-Light-120px-plus.png" width="50" height="50"/>
         </a>
         <a href="https://twitter.com/oltarzewskik">
-          <img title="Twitter" alt="Twitter" src="assets/images/Twitter_Social_Icon_Circle_White.png" width="50" height="50" />
+          <img title="Twitter" alt="Twitter" src="assets/images/Twitter_Social_Icon_Circle_White.png" width="50" height="50"/>
+        </a>
+        <a href="mailto:2004karol@gmail.com">
+          <img title="Mail" alt="Mail" src="assets/images/email-contact-icon.png" width="50" height="50"/>
         </a>
       </div>
     </footer>
