--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   </head>
   <body>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 
     <section id="home">
