Added support for jinja

--- a/index.html
+++ b/index.html
@@ -1,48 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="assets/css/fonts.css" rel="stylesheet">
-    <link href="assets/css/main.css" rel="stylesheet">
-
-    <title>Karol Ołtarzewski</title>
-  </head>
-  <body>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
-
-    <section id="home">
-      <div id="quick-description" >
-        <h1 id="my-name">Karol Ołtarzewski</h1>
-        <h3>
-          <em id="short-description">Python programmer</em>
-        </h3>
-      </div>
-      <div id="slider">
-        <a href="#skills"><span></span></a>
-      </div>
-      </section>
-
-    <section id="skills">
-      
-    </section>
-    
-    <footer id="footer">
-      <div id="social-medias">
-        <a href="https://github.com/oltarzewskik">
-          <img title="Github" alt="Github" src="assets/images/GitHub-Mark-Light-120px-plus.png" width="50" height="50"/>
-        </a>
-        <a href="https://twitter.com/oltarzewskik">
-          <img title="Twitter" alt="Twitter" src="assets/images/Twitter_Social_Icon_Circle_White.png" width="50" height="50"/>
-        </a>
-        <a href="mailto:2004karol@gmail.com">
-          <img title="Mail" alt="Mail" src="assets/images/email-contact-icon.png" width="50" height="50"/>
-        </a>
-      </div>
-    </footer>
-
-  </body>
-</html>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no"><link href=assets/css/fonts.css rel=stylesheet><link href=assets/css/main.css rel=stylesheet><script src=https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js></script><script src=assets/js/main.js></script><title>Karol Ołtarzewski</title></head><body><section id=home><div id=quick-description><h1 id=my-name>Karol Ołtarzewski</h1><h3><em id=short-description>Python programmer</em></h3></div><div id=slider><a href=#skills><span></span></a></div></section><section id=skills></section><footer id=footer><div id=social-medias><a href=https://github.com/oltarzewskik><img title=Github alt=Github src=assets/images/GitHub-Mark-Light-120px-plus.png width=50 height=50></a><a href=https://twitter.com/oltarzewskik><img title=Twitter alt=Twitter src=assets/images/Twitter_Social_Icon_Circle_White.png width=50 height=50></a><a href=mailto:2004karol@gmail.com><img title=Mail alt=Mail src=assets/images/email-contact-icon.png width=50 height=50></a></div></footer></body></html>
